fixes squished carousel images

--- a/css/amp.css
+++ b/css/amp.css
@@ -90,6 +90,7 @@ i-amp-sizer {
   left: 0;
   bottom: 0;
   right: 0;
+  object-fit: cover;
 }
 
 /* For author styling. */
